feat: add postgres db

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -23,6 +23,21 @@ components:
       volumeMounts:
         - name: m2
           path: /home/user/.m2
+  - name: postgres
+    container:
+      image: registry.redhat.io/rhel8/postgresql-12
+      memoryLimit: 512Mi
+      env:
+        - name: POSTGRESQL_USER
+          value: user
+        - name: POSTGRESQL_PASSWORD
+          value: pass
+        - name: POSTGRESQL_DATABASE
+          value: db
+      endpoints:
+        - name: postgres
+          targetPort: 5432
+          exposure: none
   - name: m2
     volume:
       size: 1G
