--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=demodevspaceapp
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://localhost:5432/db}
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=user
 spring.datasource.password=pass
